--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p>section</p>
             <article>
                 <p>article</p>
-                <h1>h1</h1>
-                <h2>h2</h2>
-                <h3>h3</h3>
+                <h1>heading 1</h1>
+                <h2>heading 2</h2>
+                <h3>heading 3</h3>
                 <p>p</p>
             </article>
         </section>
