--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Design Concept</title>
+        <title>Week 1 Homework - Wireframe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -13,18 +13,17 @@
         <nav>
             <p>nav</p>
         </nav>
+        <!--I could not figure out to keep the section and aside aligned vertically with the other containers - they overhang approx 10px both left and right?-->
         <section>
-            <p>section</p>
+            <p class="headerfix">section</p>
             <article>
-                <p>article</p>
-                <h1>heading 1</h1>
-                <h2>heading 2</h2>
-                <h3>heading 3</h3>
+                article<br><br>
+                <h1>h1, h2, h3</h1>
                 <p>p</p>
-            </article>
+            </article> 
         </section>
-        <aside>
-            <p>aside</p>
+        <aside><!--CSS width for this container is also sloppy...-->
+        <p class="headerfix">aside</p>
         </aside>
         <footer>
             <p>footer</p>
