--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <nav>
             <p>nav</p>
         </nav>
-        <!--I could not figure out to keep the section and aside aligned vertically with the other containers - they overhang approx 10px both left and right?-->
         <section>
             <p class="headerfix">section</p>
             <article>
@@ -22,7 +21,7 @@
                 <p>p</p>
             </article> 
         </section>
-        <aside><!--CSS width for this container is also sloppy...-->
+        <aside><!--CSS width/height for this container is also sloppy...-->
         <p class="headerfix">aside</p>
         </aside>
         <footer>
